--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2020.6.20
 click==7.1.2
 dnspython==2.0.0
+flash==1.0.3
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
@@ -19,3 +20,4 @@ six==1.15.0
 SQLAlchemy==1.3.20
 Werkzeug==1.0.1
 wincertstore==0.2
+bson==0.5.10
